fix(css): isolate list spacing in blog CSS

--- a/taccsite_cms/static/site_cms/css/src/_imports/elements/html-elements.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/elements/html-elements.css
@@ -118,12 +118,6 @@ dt {
   font-weight: initial; /* overwrite Bootstrap */
 }
 
-/* Add space between all list items */
-/* FAQ: Use case is list items with as much text as a paragraph */
-li + li {
-  margin-top: 0.5em;
-}
-
 
 
 
